# kiss-headers

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  UPGRADE.md  custom.css  dev-requirements.txt  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  pythonpublish.yml  run-tests.yml
APIs/custom-headers/: index.html
APIs/functions/: index.html
APIs/models/: index.html
APIs/others/: index.html
advanced-header/: index.html
advanced-headers/: index.html
assets/fonts/: font-awesome.css
contributing/: index.html
docs/: advanced-header.md  advanced-headers.md  api.md  contributing.md  explain-headers.md  imap.md  index.md  polymorphism.md  quickstart.md  the-builder.md  the-theory.md
docs/APIs/: custom-headers.md  functions.md  models.md  others.md
explain-headers/: index.html
imap/: index.html
kiss_headers/: __init__.py  api.py  builder.py  models.py  serializer.py  structures.py  utils.py  version.py
polymorphism/: index.html
quickstart/: index.html
scripts/: check  install  lint
search/: search_index.json
src/kiss_headers/: __init__.py  api.py  builder.py  models.py  serializer.py  structures.py  utils.py  version.py
tests/: test_attributes.py  test_builder.py  test_builder_create.py  test_case_insensible_dict.py  test_explain.py  test_from_unknown_mapping.py  test_header_operation.py  test_header_order.py  test_headers.py  test_headers_from_string.py  test_headers_operation.py  test_headers_reserved_keyword.py  test_polymorphic.py  test_serializer.py  test_with_http_request.py
the-builder/: index.html
the-theory/: index.html
